# Instalily

./: .gitignore  App.tsx  Dockerfile  Makefile  README.md  case_study_summary.md  client.ts  config.py  connectors.py  demo_run.py  deployment.md  docker-compose.yml  extraction.py  known_limitations.md  main.py  pipeline.py  pyproject.toml  requirements.txt  roster_parser.py  routes.py  stakeholder_parser.py  stakeholder_providers.py  stakeholders_team_page.html  styles.css  test_async_jobs.py  test_config.py  test_migrations.py  test_roster_parser_and_fixture_mode.py  test_stakeholder_discovery.py  tsconfig.json  workflow.md
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_linkage_and_dedupe_coherence.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: discovery.py  enrichment.py  extraction.py  llm.py  outreach.py  pipeline.py  roster_parser.py  scoring.py  stakeholders.py
data/demo_fixtures/: README.md
docs/: architecture.md  demo_guide.md  implementation_results.md  integrations.md  presentation.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  styles.css
scripts/: seed_account.py
tests/: conftest.py  test_async_jobs.py  test_outreach.py  test_pipeline_idempotency_and_records.py  test_scoring.py
tests/fixtures/: exhibitors_page.html  root_with_roster_links.html  roster_structured.html  stakeholders_homepage.html  stakeholders_news_page.html
workers/: celery_app.py  tasks.py
(+1 files in other folders)
