[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
pythonpath = ["backend", "workers"]
addopts = "-q"

[project]
name = "instalily-leadgen"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.13.2",
  "beautifulsoup4==4.12.3",
  "celery==5.4.0",
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "lxml==5.3.0",
  "pandas==2.2.3",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-dotenv==1.0.1",
  "redis==5.1.1",
  "requests==2.32.3",
  "sqlalchemy==2.0.35",
  "psycopg[binary]==3.2.3",
  "uvicorn==0.31.0",
  "tenacity==9.0.0",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.3",
  "pytest-mock==3.14.0",
]
